[package]
name = "hivemind"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
libp2p =  { git = "https://github.com/libp2p/rust-libp2p", branch = "master", features = ["full"]}
log = "0.4.27"
rand = "0.9.1"
tokio = {version = "1.45.0", features = ["full"] }
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }


[[bin]]
path = "edge/src/main.rs"
name = "hivemind"
